--- a/.github/workflows/secret-demo.yml
+++ b/.github/workflows/secret-demo.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           API_KEY: ${{secrets.API_KEY}}
         run: |
-          if [ -n "API_KEY" ]; then
+          if [ -n "$API_KEY" ]; then
             echo "API_KEY válida!"
           else
             echo "API_KEY não encontrada!"
